# aria

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  ATTRIBUTION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  aria-init  pyproject.toml
.claude/: AGENTS.md  settings.json
.claude/hooks/: aria-banner.sh  aria-boot.sh
.claude/scripts/: aria-boot-sync  aria-config-validate  aria-context-assembly.py  aria-credential-watch.py  aria-data-freshness.py  aria-esi-sync.py  aria-oauth-setup.py  aria-refresh  aria-skill-index.py  aria-skill-preflight.py  aria-token-refresh.py  count_persona_tokens.py  cron-example.txt
.claude/skills/: SCHEMA.md  _index.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  test-universe.yml  tier2-skill-tests.yml
dev/: DESIGN.md  PROMPT_INJECTION_HARDENING.md  PYTHON_SECURITY_LIBRARIES_ANALYSIS.md  README.md  RELEASE.md  SDE_ERRORS_DIFFS.md
dev/archive/: BUILD_COST_IMPROVEMENTS_PROPOSAL.md  CONTEXT_AWARE_TOPOLOGY_PROPOSAL.md  DIRECTORY_STRUCTURE_REFACTOR.md  LOCAL_INTEL_ORIENT_PROPOSAL.md  MARKET_MCP_PROPOSAL.md  NOTIFICATION_FILTER_REARCHITECTURE_PROPOSAL.md  PARIA_PERSONA.md  PERSONAS.md  PERSONA_CLEANUP_PROPOSAL.md  PERSONA_HIERARCHY_PROPOSAL.md  PERSONA_SKILL_SEPARATION.md  PROJECT_PARIA.md  PROXIMITY_MARKET_SEARCH_PROPOSAL.md  README.md  ROLEPLAY_CONFIG.md  SDE_DATA_ACCESS_REFACTOR.md  SPLIT_PROPOSAL.md  eve_workbench_phase0_playbook.md  token_analysis.json
dev/decisions/: ADR-001-multi-pilot-architecture.md  ADR-002-skill-metadata-schema.md  ADR-003-data-volatility-protocol.md  ADR-004-roleplay-opt-in.md  ADR-005-boot-modularization.md  README.md
dev/design/: MCP_UNIVERSE_SERVER_DESIGN.md
dev/evidence/: phase0_workbench_validation.md
dev/mechanics/: EVEOnlineGasRegionalDataInquiry.md  EveOnlineSpecialSpawnSitesInventory.md  PyfaEOSIntegrationForEveOnline.md
dev/planning/: REMEDIATION_BACKLOG.md  TODO.md  TODO_SECURITY.md
dev/plans/: MARKET_ARBITRAGE_IMPLEMENTATION.md
dev/playbooks/: phase0_api_validation_template.md
dev/proposals/: SOVEREIGNTY_TERRITORY_DATA_PROPOSAL.md  T2_INVENTION_AMORTIZATION_PROPOSAL.md  UNIFIED_FIT_SOURCES_PROPOSAL.md
dev/reviews/: CONFIGURATION_MANAGEMENT_REVIEW.md  CONTEXT_MANAGEMENT_REVIEW.md  DRY_VIOLATIONS_REVIEW.md  GAME_DEV_UX_REVIEW.md  LLM-INTEGRATION_000_GEMINI.md  LLM_INTEGRATION_000.md  PROJECT_REVIEW_2026-01.md  PYTHON_REVIEW_2026-01.md  SECURITY_000.md  SECURITY_001.md  SKILL_ACTIVITY_HEATMAP.md  TEST_HARNESS_000.md  beginner-intermediate-features.md  decomposition_guide.md
dev/scripts/: extract_invention_data.py
dev/spikes/: eos-integration-FINDINGS.md
docs/: ADHOC_MARKETS.md  ARCHITECTURE.md  COMMAND_SUGGESTIONS.md  CONTEXT_AWARE_TOPOLOGY.md  CONTEXT_POLICY.md  DATA_AUTHORITY.md  DATA_FILES.md  DATA_SOURCES.md  DATA_VERIFICATION.md  DEPLOYMENT.md  ESI.md  EXPERIENCE_ADAPTATION.md  FAQ.md  FIRST_RUN.md  MULTI_PILOT_ARCHITECTURE.md  NOTIFICATION_PROFILES.md  PERSONA_LOADING.md  PROTOCOLS.md  PYTHON_ENVIRONMENT.md  README.md  REALTIME_CONFIGURATION.md  ROUTE_SCENARIOS.md  SESSION_CONTEXT.md  TESTING.md  TLDR.md  TYPING_ROADMAP.md
examples/: README.md
examples/amarr-industrialist/: blueprint_library.md  exploration_catalog.md  mission_log.md  operational_profile.md  pilot_profile.md  ship_status.md
examples/caldari-mission-runner/: blueprint_library.md  exploration_catalog.md  mission_log.md  operational_profile.md  pilot_profile.md  ship_status.md
examples/gallente-selfsufficient/: blueprint_library.md  exploration_catalog.md  mission_log.md  operational_profile.md  pilot_profile.md  ship_status.md
examples/minmatar-explorer/: blueprint_library.md  exploration_catalog.md  mission_log.md  operational_profile.md  pilot_profile.md  ship_status.md
examples/notification-profiles/: README.md  home-defense.yaml  killwatch.yaml
personas/: README.md
personas/_shared/: rp-levels.md  skill-loading.md
personas/aria-mk4/: intel-sources.md  manifest.yaml  voice.md
personas/aura-c/: intel-sources.md  manifest.yaml  voice.md
personas/forge/: intel-sources.md  manifest.yaml  voice.md
personas/paria/: intel-sources.md  manifest.yaml  voice.md
personas/paria-exclusive/: escape-route.md  hunting-grounds.md  mark-assessment.md  ransom-calc.md  sec-status.md
personas/throne/: intel-sources.md  manifest.yaml  voice.md
personas/vind/: intel-sources.md  manifest.yaml  voice.md
reference/: INDEX.md  data-sources.json  mcp-policy.json
reference/activities/: isk_estimates.yaml  skill_plans.yaml
reference/agents/: README.md
reference/archetypes/: README.md
reference/constants/: trade_hubs.json
reference/factions/: npc_corporations.json
reference/fittings/: MODULE_NAMES.md
reference/industry/: facility_bonuses.json  fuel_blocks.json  invention_materials.json  manufacturing.md  material_sources.json  npc_blueprint_sources.md  terminal_materials.json
reference/lore/: README.md  amarr.md  caldari.md  factions.md  gallente.md  minmatar.md  regions.md
reference/mechanics/: abyssal_deadspace.json  abyssal_deadspace.md  ammunition.md  battlecruiser_fitting.md  capacitor_mechanics.md  combat_anomalies.md  (+32 more)
templates/: README.md  aria-credentials.json.template  blueprint_library.template.md  exploration_catalog.template.md  mission_log.template.md  operational_profile.template.md  pilot_profile.template.md  ship_status.template.md
tests/: conftest.py  test_arbitrage_engine.py  test_arbitrage_hauling.py  test_auth.py  test_cache_queries.py  test_client.py  test_commands.py  test_commands_esi.py  test_constants.py  test_context_sanitization.py  test_core_auth.py  test_core_keyring.py  test_data_integrity.py  test_formatters.py  test_history_cache.py  test_keyring_backend.py  test_market_cache.py  test_market_clipboard.py  test_market_database.py  test_market_models.py  test_market_nearby.py  test_models_fitting.py  test_persona.py  test_retry.py  test_services_init.py  test_skill_preflight.py
userdata/: README.md
(+1041 files in other folders)
